public/footer/footer.css
#footer{
  width:100%;
  margin:0;
  height:100px;
  position:fixed;
  bottom:0;
  left:0;
  max-height: 30px; 
}
.current-track {
  background: #34363f;
  padding: 5px 15px;
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  text-align: center;
}

.current-track__options .controls {
  width: 80%;
  display: inline;
  float: right;
  flex-flow: row wrap;
  justify-content: space-between; }

.current-track__options .controls .devices:hover {
  text-decoration: none; }

.current-track__options .controls .devices i {
  margin-right: 5px;
  margin-left: 2px;}

.current-track__options .controls .devices span {
  font-size: 11px;
  text-transform: uppercase; }

@media (max-width: 1400px) {
  .current-track__actions {
    width: 10%; }
  .current-track__progress {
    width: 50%; }
  .current-track__options {
    width: 40%; } }

@media (max-width: 980px) {
  .current-track__actions {
    width: 10%; }
  .current-track__progress {
    width: 40%; }
  .current-track__options {
    width: 50%; } }

@media (max-width: 768px) {
  .current-track__actions {
    width: 25%; }
  .current-track__progress {
    width: 75%; }
  .current-track__options {
    width: 100%; } }

@media (max-width: 480px) {
  .current-track__actions {
    width: 100%;
    justify-content: space-around;
    padding: 5px 0; }
  .current-track__progress {
    width: 100%;
    padding: 5px 0; }
  .current-track__options {
    width: 100%;
    padding: 5px 0; } }

@media (max-width: 768px) {
  .current-track__action {
    padding-top: 15px; } }

